--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -1,4 +1,3 @@
 - title: "Lecture 1 (8/30/2022)"
-  description: "TBA"
-  filename: ""
-  video: ""
+  description: "Introduction and overview of Cycles and K-theory"
+  filename: "lecture1.pdf"
