--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: "Topics in Algebra: Algebraic K-theory and Algebraic Cycles"
 instructor: "Danny Krashen"
 instructor-email: "&#x64;&#x6b;&#x72;&#x61;&#x73;&#x68;&#x65;&#x6e;&#x40;&#x75;&#x70;&#x65;&#x6e;&#x6e;&#x2e;&#x65;&#x64;&#x75;"
 office: "DRL 3E6"
-office-hour: "TBA"
+office-hour: "Tuesdays 5:10-6pm"
 
 baseurl: "/kcycle"
 
