--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -1,3 +1,6 @@
 - title: "Lecture 1 (8/30/2022)"
   description: "Introduction and overview of Cycles and K-theory"
   filename: "lecture1.pdf"
+- title: "Lecture 2 (9/1/2022)"
+  description: "Cycles, rational equivalence, pushing forward and pulling back"
+  filename: "lecture2.pdf"
