--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -4,3 +4,6 @@
 - title: "Lecture 2 (9/1/2022)"
   description: "Cycles, rational equivalence, pushing forward and pulling back"
   filename: "lecture2.pdf"
+- title: "Lecture 3 (9/6/2022)"
+  description: "Towards intersections: the first Chern class of a line bundle"
+  filename: "lecture3.pdf"
