--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -7,3 +7,6 @@
 - title: "Lecture 3 (9/6/2022)"
   description: "Towards intersections: the first Chern class of a line bundle"
   filename: "lecture3.pdf"
+- title: "Lecture 4 (9/8/2022)"
+  description: "A taste of Chow group of vector bundles (towards the Gysin pullback maps and intersections)"
+  filename: "lecture4.pdf"
