--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -10,3 +10,6 @@
 - title: "Lecture 4 (9/8/2022)"
   description: "A taste of Chow group of vector bundles (towards the Gysin pullback maps and intersections)"
   filename: "lecture4.pdf"
+- title: "Lecture 5 (9/13/2022)"
+  description: "(getting stuck with a) Normal cones example"
+  filename: "lecture5.pdf"
