--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -13,3 +13,6 @@
 - title: "Lecture 5 (9/13/2022)"
   description: "(getting stuck with a) Normal cones example"
   filename: "lecture5.pdf"
+- title: "Lecture 6 (9/15/2022)"
+  description: "Deformation to the normal cone and intersection products summary, from Chern classes to K-theory"
+  filename: "lecture6.pdf"
