--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -16,3 +16,6 @@
 - title: "Lecture 6 (9/15/2022)"
   description: "Deformation to the normal cone and intersection products summary, from Chern classes to K-theory"
   filename: "lecture6.pdf"
+- title: "Lecture 7 (9/20/2022)"
+  description: "About Riemann-Roch"
+  filename: "lecture7.pdf"
