--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -19,3 +19,6 @@
 - title: "Lecture 7 (9/20/2022)"
   description: "About Riemann-Roch"
   filename: "lecture7.pdf"
+- title: "Lecture 8 (9/27/2022)"
+  description: "Oriented cohomology theories"
+  filename: "lecture8.pdf"
