--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -22,3 +22,6 @@
 - title: "Lecture 8 (9/27/2022)"
   description: "Oriented cohomology theories"
   filename: "lecture8.pdf"
+- title: "Lecture 9 (9/29/2022)"
+  description: "Statement of the Panin-Smirnov-Grothendieck-Hirzebruch-Riemann-Roch Theorem"
+  filename: "lecture9.pdf"
