--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -28,3 +28,6 @@
 - title: "Lecture 10 (10/4/2022)"
   description: "Classical (lower) K-theory"
   filename: "lecture10.pdf"
+- title: "Lecture 11 (10/11/2022)"
+  description: "Towards higher K-theory: Q construction and nerves"
+  filename: "lecture11.pdf"
