--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -31,3 +31,6 @@
 - title: "Lecture 11 (10/11/2022)"
   description: "Towards higher K-theory: Q construction and nerves"
   filename: "lecture11.pdf"
+- title: "Lecture 12 (10/13/2022)"
+  description: "Localization, devissage, and resolution."
+  filename: "lecture12.pdf"
