--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -34,3 +34,9 @@
 - title: "Lecture 12 (10/13/2022)"
   description: "Localization, devissage, and resolution."
   filename: "lecture12.pdf"
+- title: "Lecture 13 (10/18/2022)"
+  description: "Q-construction facts and pushforwards."
+  filename: "lecture13.pdf"
+- title: "Lecture 14 (10/20/2022)"
+  description: "Projective bundles, introduction to division algebras and Galois cohomology."
+  filename: "lecture14.pdf"
