--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -40,6 +40,9 @@
 - title: "Lecture 14 (10/20/2022)"
   description: "Projective bundles, introduction to division algebras and Galois cohomology."
   filename: "lecture14.pdf"
-- title: "Lecture 15 (10/20/2022)"
+- title: "Lecture 15 (10/25/2022)"
   description: "The story of algebraic structures, introduction to the Brown-Gersten-Quillen spectral sequence."
   filename: "lecture15.pdf"
+- title: "Lecture 16 (10/27/2022)"
+  description: "Localization and support, towards the BGQ sequence."
+  filename: "lecture16.pdf"
