--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -46,3 +46,9 @@
 - title: "Lecture 16 (10/27/2022)"
   description: "Localization and support, towards the BGQ sequence."
   filename: "lecture16.pdf"
+- title: "Lecture 17 (11/1/2022)"
+  description: "The BGQ sequence, definition of the Severi-Brauer varieties."
+  filename: "lecture17.pdf"
+- title: "Lecture 18 (11/3/2022)"
+  description: "The BGQ sequence, definition of the Severi-Brauer varieties."
+  filename: "lecture18.pdf"
