--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -52,3 +52,6 @@
 - title: "Lecture 18 (11/3/2022)"
   description: "The BGQ sequence, definition of the Severi-Brauer varieties."
   filename: "lecture18.pdf"
+- title: "Lecture 19 (11/8/2022)"
+  description: "The end of the Merkurjev-Suslin Theorem (assuming the beginning)."
+  filename: "lecture19.pdf"
