--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -55,3 +55,9 @@
 - title: "Lecture 19 (11/8/2022)"
   description: "The end of the Merkurjev-Suslin Theorem (assuming the beginning)."
   filename: "lecture19.pdf"
+- title: "Lecture 20 (11/10/2022)"
+  description: "Hilbert 90 for K2, assuming some facts."
+  filename: "lecture20.pdf"
+- title: "Lecture 21 (11/17/2022)"
+  description: "Reducing to the case of surjectivity of the norm, assuming facts about the K-cohomology of Severi-Brauer varieties."
+  filename: "lecture21.pdf"
