--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -61,3 +61,9 @@
 - title: "Lecture 21 (11/17/2022)"
   description: "Reducing to the case of surjectivity of the norm, assuming facts about the K-cohomology of Severi-Brauer varieties."
   filename: "lecture21.pdf"
+- title: "Lecture 22 (11/29/2022)"
+  description: "Recap on reduction to information about K-cohomology of Severi-Brauer varieties."
+  filename: "lecture22.pdf"
+- title: "Lecture 23 (12/1/2022)"
+  description: "The Brauer group and representations of Lie algebras. From H1(K2) to Chow, part 1."
+  filename: "lecture23.pdf"
